updates to salt and seed

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -8,10 +8,10 @@ server.hostname "[US West] Arkoudaphobia | Next Wipe 2/4 | [5x gather][2x smelt]
 server.maxplayers 100
 
 # The seed for the world
-server.seed 457855583
+server.seed 28467
 
 # The salt for the world
-server.salt 602652573
+server.salt 1657728481
 
 # The size of the world
 server.worldsize 4500
