--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -23,7 +23,7 @@ server.description "A community server for those looking for a, relativly, safe 
 server.headerimage "http://cdn.utmonline.net/playrustres/arkoudaphobiaBanner.jpg"
 
 # The URL to your servers website.
-server.url "https://playrust.utmonline.net"
+server.url "https://utmo.link/playrust"
 
 ####################################
 # Server Environment Configuration #
