Updating server settings
*Reducing the maximum number of players to 50.
*Updating Seed to new value for the month
*Updating Salt to new value for the month

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -5,16 +5,16 @@
 server.hostname "[US Phoenix] Arkoudaphobia | Next Wipe 3/3 | [Gather XP][2x smelt][NoobFriendly][FacepunchWipesOnly]"
 
 # The maximum number of players on the server at a given time
-server.maxplayers 100
+server.maxplayers 50
 
 # The seed for the world
-server.seed 28467
+server.seed 1157614539
 
 # The salt for the world
-server.salt 1657728481
+server.salt 470868050
 
 # The size of the world
-server.worldsize 4500
+server.worldsize 4000
 
 #  A text description of your server. For a new line add:  \n
 server.description "A community server for those looking for a, relativly, safe server to learn to play on anyone is welcome to come and join us. To reach the admin contact rustadmin@utmonline.net.\nWe have a 0 tolerance policy for hate language any violation will result in a ban from the server see our web site for more details."
