Disabling the hard coding of the number of phsics steps for the server to perform.

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -47,7 +47,7 @@ heli.bulletdamagescale 1.2
 heli.lifetimeminutes 30
 
 # Physics Settings | The amount of Physics steps performed by the server per second.
-physics.steps 20
+#physics.steps 20
 
 ################################################
 # Resource and Decay Settings                                                   #
