--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -2,7 +2,7 @@
 # Core Server Configurations #
 #########################################
 # The Servers display name
-server.hostname "[US Phoenix] Arkoudaphobia | Next Wipe 4/7 | [Gather XP][2x smelt][NoobFriendly][FacepunchWipesOnly]"
+server.hostname "Arkoudaphobia | [Next Wipe 4/7][US Phoenix][Gather XP][2x smelt][NoobFriendly][FacepunchWipesOnly]"
 
 # The maximum number of players on the server at a given time
 server.maxplayers 50
@@ -20,7 +20,7 @@ server.worldsize 4000
 server.description "A community server for those looking for a, relativly, safe server to learn to play on anyone is welcome to come and join us. To reach the admin contact rustadmin@utmonline.net.\nWe have a 0 tolerance policy for hate language any violation will result in a ban from the server see our web site for more details."
 
 # A URL to the image which shows up on the server details screen (dimensions are 512x256).
-server.headerimage "http://cdn.utmonline.net/playrustres/arkoudaphobiaBanner.jpg"
+server.headerimage "https://utm.azureedge.net/rust/arkoudaphobiaBanner.jpg"
 
 # The URL to your servers website.
 server.url "https://utmo.link/playrust"
