Update the name and server description.

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -2,7 +2,7 @@
 # Core Server Configurations #
 #########################################
 # The Servers display name
-server.hostname "Arkoudaphobia | [Next Wipe 4/7][US Phoenix][Gather XP][2x smelt][NoobFriendly][FacepunchWipesOnly]"
+server.hostname "Arkoudaphobia | [Next Wipe 4/7][US Phoenix]"
 
 # The maximum number of players on the server at a given time
 server.maxplayers 50
@@ -17,7 +17,7 @@ server.salt 470868050
 server.worldsize 4000
 
 #  A text description of your server. For a new line add:  \n
-server.description "A community server for those looking for a, relativly, safe server to learn to play on anyone is welcome to come and join us. To reach the admin contact rustadmin@utmonline.net.\nWe have a 0 tolerance policy for hate language any violation will result in a ban from the server see our web site for more details."
+server.description "A community server for those looking for a, relativly, safe server to learn to play on anyone is welcome to come and join us. To reach the admin contact rustadmin@utmonline.net.\nOur server offers Gathering experice where each level you go up increasing the rate you collect resources, resources smelt about twice as fast, and we offer a transit system to teleport you between designated points on the map."
 
 # A URL to the image which shows up on the server details screen (dimensions are 512x256).
 server.headerimage "https://utm.azureedge.net/rust/arkoudaphobiaBanner.jpg"
