--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -2,7 +2,7 @@
 # Core Server Configurations #
 #########################################
 # The Servers display name
-server.hostname "Arkoudaphobia | [Next Wipe 4/7][US Phoenix]"
+server.hostname "Arkoudaphobia | [Next Wipe 4/7][US Phoenix][Meteor Showers]"
 
 # The maximum number of players on the server at a given time
 server.maxplayers 50
