Recinding Muted07's moderator status at his request for the duration of the wipe cycle.

--- a/ServerConfigFiles/users.cfg
+++ b/ServerConfigFiles/users.cfg
@@ -1,2 +1,1 @@
-ownerid 76561197963595856 "Diabloman87 (Josh)" "Server Owner and Operator"
-moderatorid 76561198051076127 "muted07" "Trusted Moderator"
+aownerid 76561197963595856 "Diabloman87 (Josh)" "Server Owner and Operator"
