Updates to Server config file * Removal of elements made redundant by new mods * Server Name Update * Returning max player limit to 100

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -2,10 +2,10 @@
 # Core Server Configurations #
 #########################################
 # The Servers display name
-server.hostname "Arkoudaphobia | [Next Wipe 4/7][US Phoenix][Meteor Showers]"
+server.hostname "Arkoudaphobia | [Next Wipe 4/7][Meteor Showers][Active Admin]"
 
 # The maximum number of players on the server at a given time
-server.maxplayers 50
+server.maxplayers 100
 
 # The seed for the world
 server.seed 1157614539
@@ -45,21 +45,6 @@ falldamage.enabled true
 heli.bulletAccuracy 2
 heli.bulletdamagescale 1.2
 heli.lifetimeminutes 30
-
-# Physics Settings | The amount of Physics steps performed by the server per second.
-#physics.steps 20
-
-################################################
-# Resource and Decay Settings                                                   #
-################################################
-
-# Changes how often resources respawn.
-spawn.min_rate 0.1
-spawn.max_rate 4.0
-
-# Changes how close resources spawn to each other.
-spawn.min_density 0.1
-spawn.max_density 1.0
 
 # Changes how quickly structures decay off the map
 Decay.scale 0.2
