--- a/ServerConfigFiles/users.cfg
+++ b/ServerConfigFiles/users.cfg
@@ -1,1 +1,1 @@
-aownerid 76561197963595856 "Diabloman87 (Josh)" "Server Owner and Operator"
+ownerid 76561197963595856 "Diabloman87" "Server Owner and Operator"
