Changing the servers name

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -2,7 +2,7 @@
 # Core Server Configurations #
 #########################################
 # The Servers display name
-server.hostname "Arkoudaphobia | [Next Wipe 4/7][Meteor Showers]"
+server.hostname "The Rusty Bear | [Next Wipe 5/5][Meteor Showers][Noob Friendly]"
 
 # The maximum number of players on the server at a given time
 server.maxplayers 100
