--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -17,7 +17,7 @@ server.salt 962195726
 server.worldsize 4000
 
 #  A text description of your server. For a new line add:  \n
-server.description "A community server for those looking for a, relativly, safe server to learn to play on anyone is welcome to come and join us. To reach the admin contact rustadmin@utmonline.net.\nOur server offers Gathering experice where each level you go up increasing the rate you collect resources, resources smelt about twice as fast, and we offer a transit system to teleport you between designated points on the map."
+server.description "A community server for those looking for a, relativly, safe server to learn to play on anyone is welcome to come and join us. To reach the admin contact rustadmin@utmonline.net.\nOur server offers Gathering experice where each level you go up increasing the rate you collect resources, resources smelt about twice as fast."
 
 # A URL to the image which shows up on the server details screen (dimensions are 512x256).
 server.headerimage "https://utm.azureedge.net/rust/arkoudaphobiaBanner.jpg"
