Updating server resource spawn rates to be 50% higher and faster then normal.

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -48,3 +48,9 @@ heli.lifetimeminutes 30
 
 # Changes how quickly structures decay off the map
 Decay.scale 0.2
+
+# Control Resource Spawn Rate
+spawn.min_rate 0.5
+spawn.max_rate 1.5
+spawn.min_density 0.5
+spawn.max_desnity 1.5
