Updating the servers antihack configuration so tweaks made since last week persist post restart.

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -54,3 +54,12 @@ spawn.min_rate 0.1
 spawn.max_rate 0.7
 spawn.min_density 0.5
 spawn.max_density 2.0
+
+#####################################
+# Server AntiHack Configuration		#
+#####################################
+
+antihack.debuglevel = 2
+antihack.noclip_penalty = 5
+antihack.speedhack_deltatime = 0.5
+antihack.projectile_penalty = 2
