Fixing a bug in the server config file related to the servers antihack configuration

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -59,7 +59,7 @@ spawn.max_density 2.0
 # Server AntiHack Configuration		#
 #####################################
 
-antihack.debuglevel = 2
-antihack.noclip_penalty = 5
-antihack.speedhack_deltatime = 0.5
-antihack.projectile_penalty = 2
+antihack.debuglevel 2
+antihack.noclip_penalty 5
+antihack.speedhack_deltatime 0.5
+antihack.projectile_penalty 2
