Configuring the server to hand out penalty's for LineOfSight violations (AntiHack)

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -63,3 +63,4 @@ antihack.debuglevel 2
 antihack.noclip_penalty 5
 antihack.speedhack_deltatime 0.5
 antihack.projectile_penalty 2
+antihack.lineofsight_penalty 2
