Disabling no clip rejection as it's rejecting lagit movement as no cliping.

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -64,3 +64,4 @@ antihack.noclip_penalty 5
 antihack.speedhack_deltatime 0.5
 antihack.projectile_penalty 2
 antihack.lineofsight_penalty 2
+antihack.noclip_reject false
