Updating server config file data.

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -2,10 +2,10 @@
 # Core Server Configurations #
 #########################################
 # The Servers display name
-server.hostname "The Rusty Bear | [Next Wipe 8/4][Meteor Showers][Noob Friendly]"
+server.hostname "The Origional Rusty Bear | [Next Wipe 1/5][Meteor Showers][Noob Friendly]"
 
 # The maximum number of players on the server at a given time
-server.maxplayers 50
+server.maxplayers 100
 
 # The seed for the world
 server.seed 394916174
@@ -14,16 +14,16 @@ server.seed 394916174
 server.salt 2022511374
 
 # The size of the world
-server.worldsize 3500
+server.worldsize 4000
 
 #  A text description of your server. For a new line add:  \n
 server.description "A community server for those looking for a, relativly, safe server to learn to play on anyone is welcome to come and join us. To reach the admin contact rustadmin@utmonline.net.\nOur server offers Gathering experice where each level you go up increasing the rate you collect resources, resources smelt about twice as fast."
 
 # A URL to the image which shows up on the server details screen (dimensions are 512x256).
-server.headerimage "https://utm.azureedge.net/rust/arkoudaphobiaBanner.jpg"
+server.headerimage "https://utmo.azureedge.net/rust/arkoudaphobiaBanner.jpg"
 
 # The URL to your servers website.
-server.url "https://utmo.link/playrust"
+#server.url "https://utmo.link/playrust"
 
 ####################################
 # Server Environment Configuration #
@@ -44,24 +44,13 @@ falldamage.enabled true
 # Helicopter Configuration.  Our Heli is strong and lasts longer then your average heli
 heli.bulletAccuracy 2
 heli.bulletdamagescale 1.2
-heli.lifetimeminutes 20
+heli.lifetimeminutes 30
 
 # Changes how quickly structures decay off the map
-Decay.scale 0.5
+#Decay.scale 0.5
 
 # Control Resource Spawn Rate
-spawn.min_rate 0.1
-spawn.max_rate 0.5
-spawn.min_density 0.5
-spawn.max_density 2.0
-
-#####################################
-# Server AntiHack Configuration		#
-#####################################
-
-antihack.debuglevel 2
-antihack.noclip_penalty 5
-antihack.speedhack_deltatime 1.0
-antihack.projectile_penalty 2
-antihack.lineofsight_penalty 2
-antihack.noclip_reject false
+#spawn.min_rate 0.1
+#spawn.max_rate 0.5
+#spawn.min_density 0.5
+#spawn.max_density 2.0
