Forcing world regen with new seed and salt.

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -8,10 +8,10 @@ server.hostname "The Origional Rusty Bear | [Next Wipe 1/5][Meteor Showers][Noob
 server.maxplayers 100
 
 # The seed for the world
-server.seed 394916174
+server.seed 234568020
 
 # The salt for the world
-server.salt 2022511374
+server.salt 531257594
 
 # The size of the world
 server.worldsize 4000
@@ -47,7 +47,7 @@ heli.bulletdamagescale 1.2
 heli.lifetimeminutes 30
 
 # Changes how quickly structures decay off the map
-#Decay.scale 0.5
+Decay.scale 0.5
 
 # Control Resource Spawn Rate
 #spawn.min_rate 0.1
