Updating Server Name

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -2,7 +2,7 @@
 # Core Server Configurations #
 #########################################
 # The Servers display name
-server.hostname "The Origional Rusty Bear | [Next Wipe 1/5][Meteor Showers][Noob Friendly]"
+server.hostname "The Rusty Bear | [Next Wipe 1/5][Meteor Showers][Noob Friendly]"
 
 # The maximum number of players on the server at a given time
 server.maxplayers 100
