Updaing config file for Jan 17 update.

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -2,22 +2,22 @@
 # Core Server Configurations #
 #########################################
 # The Servers display name
-server.hostname "The Rusty Bear | [Next Wipe 1/5][Meteor Showers][Noob Friendly]"
+server.hostname "The Rusty Bear | [Next Wipe 2/2][Meteor Showers][Noob Friendly]"
 
 # The maximum number of players on the server at a given time
-server.maxplayers 100
+server.maxplayers 50
 
 # The seed for the world
-server.seed 234568020
+server.seed 1048334002
 
 # The salt for the world
-server.salt 531257594
+server.salt 220192286
 
 # The size of the world
-server.worldsize 4000
+server.worldsize 3500
 
 #  A text description of your server. For a new line add:  \n
-server.description "A community server for those looking for a, relativly, safe server to learn to play on anyone is welcome to come and join us. To reach the admin contact rustadmin@utmonline.net.\nOur server offers Gathering experice where each level you go up increasing the rate you collect resources, resources smelt about twice as fast."
+server.description "A community server for those looking for a, relativly, safe server to learn to play on anyone is welcome to come and join us. To reach the admin contact rustadmin@utmonline.net"
 
 # A URL to the image which shows up on the server details screen (dimensions are 512x256).
 server.headerimage "https://utmo.azureedge.net/rust/arkoudaphobiaBanner.jpg"
