readding the link to the servers website

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -23,7 +23,7 @@ server.description "A community server for those looking for a, relativly, safe 
 server.headerimage "https://utmo.azureedge.net/rust/arkoudaphobiaBanner.jpg"
 
 # The URL to your servers website.
-#server.url "https://utmo.link/playrust"
+server.url "http://utmo.link/playrust"
 
 ####################################
 # Server Environment Configuration #
