Updating server.cfg to handle idle kick settings that were part of the AFK mod.

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -49,8 +49,7 @@ heli.lifetimeminutes 30
 # Changes how quickly structures decay off the map
 Decay.scale 0.5
 
-# Control Resource Spawn Rate
-#spawn.min_rate 0.1
-#spawn.max_rate 0.5
-#spawn.min_density 0.5
-#spawn.max_density 2.0
+# Control Idle Kicking
+server.idlekick 30
+server.idlekickmode 2
+server.islekickadmins 0
