Updating header image to use dedicated rusty bear CDN

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -20,7 +20,7 @@ server.worldsize 4000
 server.description "A community server for those looking for a, relativly, safe server to learn to play on anyone is welcome to come and join us. To reach the admin contact rustadmin@utmonline.net"
 
 # A URL to the image which shows up on the server details screen (dimensions are 512x256).
-server.headerimage "https://utmo.azureedge.net/rust/arkoudaphobiaBanner.jpg"
+server.headerimage "https://rustybear.azureedge.net/core/BannerMain.jpg"
 
 # The URL to your servers website.
 server.url "http://utmo.link/playrust"
