Disabling radiation since that's controlled by monument radiation.

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -53,3 +53,6 @@ Decay.scale 0.5
 server.idlekick 30
 server.idlekickmode 2
 server.islekickadmins 0
+
+#Disable radiation since that's controlled by a mod
+server.radiation false
