--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -2,19 +2,19 @@
 # Core Server Configurations #
 #########################################
 # The Servers display name
-server.hostname "The Rusty Bear | [Next Wipe 3/2][Meteor Showers][Noob Friendly]"
+server.hostname "The Rusty Bear|[Next Wipe 4/6]"
 
 # The maximum number of players on the server at a given time
 server.maxplayers 50
 
 # The seed for the world
-server.seed 480053229
+server.seed 1984103110
 
 # The salt for the world
-server.salt 294837003
+server.salt 1879243546
 
 # The size of the world
-server.worldsize 4000
+server.worldsize 3500
 
 #  A text description of your server. For a new line add:  \n
 server.description "A community server for those looking for a, relativly, safe server to learn to play on anyone is welcome to come and join us. To reach the admin contact rustadmin@utmonline.net"
