Adding population control to server.cfg

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -56,3 +56,12 @@ server.islekickadmins 0
 
 #Disable radiation since that's controlled by a mod
 server.radiation false
+
+#Population Control
+bear.population 3
+boar.population 7
+chicken.population 2
+horse.population 3
+stag.population 3
+wolf.poopulation 6
+zombie.population 5
