Adjusting Heli Config

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -43,7 +43,8 @@ falldamage.enabled true
 
 # Helicopter Configuration.  Our Heli is strong and lasts longer then your average heli
 heli.bulletAccuracy 2
-heli.bulletdamagescale 1.2
+heli.bulletdamagescale 0.9
+heli.guns 2
 heli.lifetimeminutes 30
 
 # Changes how quickly structures decay off the map
