Updating server title and description to highlight the blueprint system in use on the server.

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -2,7 +2,7 @@
 # Core Server Configurations #
 #########################################
 # The Servers display name
-server.hostname "The Rusty Bear|[Next Wipe 6/1]"
+server.hostname "The Rusty Bear|[Next Wipe 6/1][Blueprints]"
 
 # The maximum number of players on the server at a given time
 server.maxplayers 50
@@ -17,7 +17,7 @@ server.salt 873255591
 server.worldsize 3500
 
 #  A text description of your server. For a new line add:  \n
-server.description "A community server for those looking for a, relativly, safe server to learn to play on anyone is welcome to come and join us. To reach the admin contact rustadmin@utmonline.net"
+server.description "A community server for those looking for a, relativly, safe server to learn to play on anyone is welcome to come and join us.  We offer both gater XP & a blueprint system on the server, in addition to other mods. To reach the admin contact rustadmin@utmonline.net"
 
 # A URL to the image which shows up on the server details screen (dimensions are 512x256).
 server.headerimage "https://rustybear.azureedge.net/core/BannerMain.jpg"
