Updating server config for 6/1 wipe

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -2,22 +2,22 @@
 # Core Server Configurations #
 #########################################
 # The Servers display name
-server.hostname "The Rusty Bear|[Next Wipe 6/1][Blueprints]"
+server.hostname "The Rusty Bear|[Next Wipe 7/6][Blueprints][Gather XP]"
 
 # The maximum number of players on the server at a given time
 server.maxplayers 50
 
 # The seed for the world
-server.seed 1679927280
+server.seed 1982556358
 
 # The salt for the world
-server.salt 873255591
+server.salt 699293402
 
 # The size of the world
 server.worldsize 3000
 
 #  A text description of your server. For a new line add:  \n
-server.description "A community server for those looking for a, relativly, safe server to learn to play on anyone is welcome to come and join us.  We offer both gater XP & a blueprint system on the server, in addition to other mods. To reach the admin contact rustadmin@utmonline.net"
+server.description "A community server for those looking for a, relativly, safe server to learn to play on anyone is welcome to come and join us.  We offer gather XP, a blueprint system, and homes on the server, in addition to other mods. To reach the admin contact rustadmin@utmonline.net"
 
 # A URL to the image which shows up on the server details screen (dimensions are 512x256).
 server.headerimage "https://rustybear.azureedge.net/core/BannerMain.jpg"
@@ -59,10 +59,10 @@ server.islekickadmins 0
 server.radiation false
 
 #Population Control
-bear.population 3
-boar.population 7
-chicken.population 2
+bear.population 4
+boar.population 6
+chicken.population 1
 horse.population 3
 stag.population 3
-wolf.poopulation 6
-zombie.population 3
+wolf.poopulation 5
+zombie.population 5
