Updating github readme file and server description.

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -17,7 +17,7 @@ server.salt 699293402
 server.worldsize 3500
 
 #  A text description of your server. For a new line add:  \n
-server.description "A community server for those looking for a, relativly, safe server to learn to play on anyone is welcome to come and join us.  We offer gather XP, a blueprint system, and homes on the server, in addition to other mods. To reach the admin contact rustadmin@utmonline.net"
+server.description "A modded server for those looking for a, relativly, safe server to learn to play on, anyone is welcome to come and join us.  We offer gather XP, a blueprint system, and homes on the server, in addition to other mods. To reach the admin contact rustadmin@utmonline.net"
 
 # A URL to the image which shows up on the server details screen (dimensions are 512x256).
 server.headerimage "https://rustybear.azureedge.net/core/BannerMain.jpg"
