--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -2,7 +2,7 @@
 # Core Server Configurations #
 #########################################
 # The Servers display name
-server.hostname "The Rusty Bear|[Next Wipe 8/3][Blueprints][Gather XP]"
+server.hostname "The Rusty Bear|[Wiped 7/7][Blueprints][Gather XP]"
 
 # The maximum number of players on the server at a given time
 server.maxplayers 50
