Updating server configuration

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -2,22 +2,22 @@
 # Core Server Configurations #
 #########################################
 # The Servers display name
-server.hostname "The Rusty Bear|[Wiped 8/3][Blueprints][Gather XP]"
+server.hostname "The Rusty Bear|[Wiped 5/5][Gather XP]"
 
 # The maximum number of players on the server at a given time
 server.maxplayers 50
 
 # The seed for the world
-server.seed 1654213714
+server.seed 1235812830
 
 # The salt for the world
-server.salt 144935996
+server.salt 414293832
 
 # The size of the world
 server.worldsize 4000
 
 #  A text description of your server. For a new line add:  \n
-server.description "A modded server for those looking for a, relativly, safe server to learn to play on, anyone is welcome to come and join us.  We offer gather XP, a blueprint system, and homes on the server, in addition to other mods. To reach the admin contact rustadmin@utmonline.net"
+server.description "Testing server to bring backonline.  Don't join us just yet! To reach the admin contact rustadmin@utmonline.net"
 
 # A URL to the image which shows up on the server details screen (dimensions are 512x256).
 server.headerimage "https://rustybear.azureedge.net/core/BannerMain.jpg"
