Updating Server Config

--- a/ServerConfigFiles/server.cfg
+++ b/ServerConfigFiles/server.cfg
@@ -17,13 +17,13 @@ server.salt 414293832
 server.worldsize 4000
 
 #  A text description of your server. For a new line add:  \n
-server.description "Testing server to bring backonline.  Don't join us just yet! To reach the admin contact rustadmin@utmonline.net"
+server.description "A modded server with lots of plugins to improve gameplay well working to keep the game balanced and fair for all. To reach the admin contact rustadmin@utmonline.net"
 
 # A URL to the image which shows up on the server details screen (dimensions are 512x256).
 server.headerimage "https://rustybear.azureedge.net/core/BannerMain.jpg"
 
 # The URL to your servers website.
-server.url "http://utmo.link/playrust"
+ server.url "http://utmo.link/rustconfig"
 
 ####################################
 # Server Environment Configuration #
